README and minor style changes

--- a/content/calrsrc.MainCampus/themes/bedeworkTheme-3.10/css/bwThemeGlobal.css
+++ b/content/calrsrc.MainCampus/themes/bedeworkTheme-3.10/css/bwThemeGlobal.css
@@ -257,6 +257,9 @@ label {
   height: 1px;
 }
 
+.bwFieldName {
+}
+
 /* Date Picker and Search Box Form Control styles
    (Bootstrap overrides) */
 .form-control {
